--- a/service.yml
+++ b/service.yml
@@ -1,11 +1,83 @@
 name: gateway-images
-lang: unknown
-lang_version: unknown
+lang: python
+lang_version: 3.12
 git:
   enable: true
 codeowners:
   enable: true
-renovatebot:
+semaphore:
   enable: true
-  automerge:
-    enable: true
+  pipeline_type: cp-dockerfile
+  docker_repos: ["confluentinc/gateway",]
+  community_docker_repos: []
+  community_maven_modules: []
+  maven_phase: 'package'
+  maven_skip_deploy: true
+  build_arm: true
+  sign_images: true
+  os_types: ["ubi9"]
+  nano_version: true
+  use_packages: true
+  cp_images: true
+  push_latest: true
+  tasks:
+    - name: cp-dockerfile-build
+      branch: master
+      pipeline_file: .semaphore/cp_dockerfile_build.yml
+      parameters:
+        - name: CONFLUENT_VERSION
+          required: true
+        - name: PACKAGES_URL
+          required: true
+        - name: PACKAGES_MAVEN_URL
+          required: true
+        - name: PACKAGING_BUILD_NUMBER
+          required: true
+        - name: ALLOW_UNSIGNED
+          required: true
+          default_value: 'False'
+          options:
+            - 'True'
+            - 'False'
+        - name: CONFLUENT_DEB_VERSION
+          required: true
+          default_value: '1'
+        - name: SKIP_COMMUNITY
+          required: false
+          default_value: 'False'
+          description: 'Skip building community docker images'
+          options:
+            - 'True'
+            - 'False'
+    - name: cp-dockerfile-promote
+      branch: master
+      pipeline_file: .semaphore/cp_dockerfile_promote.yml
+      parameters:
+        - name: CONFLUENT_VERSION
+          required: true
+        - name: IMAGE_REVISION
+          required: true
+          default_value: '1'
+        - name: UPDATE_LATEST_TAG
+          required: true
+        - name: PACKAGING_BUILD_NUMBER
+          required: true
+        - name: PROMOTE_OS_TYPE
+          required: true
+          options:
+            - 'deb'
+            - 'ubi'
+        - name: SKIP_COMMUNITY
+          required: false
+          default_value: 'False'
+          description: 'Skip publishing community docker images'
+          options:
+            - 'True'
+            - 'False'
+code_artifact:
+  enable: true
+  package_paths:
+    - maven-snapshots/maven/io.confluent/gateway-images
+    - maven-snapshots/maven/io.confluent/gateway-images-parent
+    - maven-snapshots/maven/io.confluent.gateway-images/gateway-images-parent
+    - maven-snapshots/maven/io.confluent.gateway-images/gateway
