--- a/gateway/Dockerfile.ubi9
+++ b/gateway/Dockerfile.ubi9
@@ -42,18 +42,35 @@ ARG CONFLUENT_PLATFORM_LABEL
 
 USER root
 
-# target directory must be one of the projects that gateway-run-class sets on the GATEWAY_CLASSPATH,
-# of which the artifact ID (gateway-docker) is used directly
-ADD --chown=appuser:appuser target/${ARTIFACT_ID}-${PROJECT_VERSION}-package/share/java/${ARTIFACT_ID}/* /usr/share/java/gateway/
-ADD --chown=appuser:appuser target/${ARTIFACT_ID}-${PROJECT_VERSION}-package/bin/* /usr/bin/
-ADD --chown=appuser:appuser target/${ARTIFACT_ID}-${PROJECT_VERSION}-package/etc/* /etc/gateway/
+RUN echo "===> Installing ${COMPONENT}..." \
+    && echo "===> Adding confluent repository...${CONFLUENT_PACKAGES_REPO}" \
+    && rpm --import ${CONFLUENT_PACKAGES_REPO}/archive.key \
+    && printf "[Confluent] \n\
+name=Confluent repository \n\
+baseurl=${CONFLUENT_PACKAGES_REPO}/ \n\
+gpgcheck=1 \n\
+gpgkey=${CONFLUENT_PACKAGES_REPO}/archive.key \n\
+enabled=1 " > /etc/yum.repos.d/confluent.repo \
+    && microdnf install -y \
+    confluent-${COMPONENT}-${CONFLUENT_VERSION} \
+    # We are installing confluent-telemetry package explicitly because
+    # Schema Registry's deb/rpm packages cannot directly depend on
+    # confluent-telemetry package as Schema Registry is Open Source.
+    confluent-telemetry-${CONFLUENT_VERSION} \
+    confluent-security-${CONFLUENT_VERSION} \
+    confluent-schema-registry-plugins-${CONFLUENT_VERSION} \
+    && echo "===> clean up ..."  \
+    && microdnf clean all \
+    && rm -rf /tmp/* /etc/yum.repos.d/confluent.repo \
+    && echo "===> Setting up ${COMPONENT} dirs" \
+    && mkdir -p /etc/${COMPONENT}/secrets /usr/logs \
+    && chown appuser:root -R /etc/${COMPONENT} /usr/logs \
+    && chmod -R ug+w /etc/${COMPONENT} /etc/${COMPONENT}/secrets \
+    && cd /usr/share/java \
+    && package_dedupe $(pwd)
 
 COPY --chown=appuser:appuser include/etc/confluent/docker /etc/confluent/docker
 
-RUN chmod +x /etc/confluent/docker/configure
-RUN chmod +x /etc/confluent/docker/run
-
 USER appuser
 
-# entrypoint script is used to set up the environment and run the gateway
 CMD ["/etc/confluent/docker/run"]
