--- a/gateway/Dockerfile.ubi9
+++ b/gateway/Dockerfile.ubi9
@@ -51,23 +51,17 @@ baseurl=${CONFLUENT_PACKAGES_REPO}/ \n\
 gpgcheck=1 \n\
 gpgkey=${CONFLUENT_PACKAGES_REPO}/archive.key \n\
 enabled=1 " > /etc/yum.repos.d/confluent.repo \
-    && microdnf install -y \
-    confluent-${COMPONENT}-${CONFLUENT_VERSION} \
-    # We are installing confluent-telemetry package explicitly because
-    # Schema Registry's deb/rpm packages cannot directly depend on
-    # confluent-telemetry package as Schema Registry is Open Source.
-    confluent-telemetry-${CONFLUENT_VERSION} \
-    confluent-security-${CONFLUENT_VERSION} \
-    confluent-schema-registry-plugins-${CONFLUENT_VERSION} \
+    && microdnf install -y confluent-${COMPONENT}-${CONFLUENT_VERSION} \
     && echo "===> clean up ..."  \
     && microdnf clean all \
     && rm -rf /tmp/* /etc/yum.repos.d/confluent.repo \
     && echo "===> Setting up ${COMPONENT} dirs" \
-    && mkdir -p /etc/${COMPONENT}/secrets /usr/logs \
-    && chown appuser:root -R /etc/${COMPONENT} /usr/logs \
-    && chmod -R ug+w /etc/${COMPONENT} /etc/${COMPONENT}/secrets \
-    && cd /usr/share/java \
-    && package_dedupe $(pwd)
+    && mkdir -p /var/lib/${COMPONENT}/data /etc/${COMPONENT}/secrets \
+    && chown appuser:root -R /var/lib/${COMPONENT} /etc/${COMPONENT} /etc/${COMPONENT}/secrets \
+    && chmod -R ug+w /var/lib/${COMPONENT} /etc/${COMPONENT} /etc/${COMPONENT}/secrets
+
+
+VOLUME ["/var/lib/${COMPONENT}/data", "/etc/${COMPONENT}/secrets"]
 
 COPY --chown=appuser:appuser include/etc/confluent/docker /etc/confluent/docker
 
