gateway version introduction

--- a/.semaphore/cp_dockerfile_build.yml
+++ b/.semaphore/cp_dockerfile_build.yml
@@ -37,7 +37,7 @@ global_job_config:
         echo """
         Parameters:
         ==========================
-        CONFLUENT_VERSION: $CONFLUENT_VERSION
+        GATEWAY_VERSION: $GATEWAY_VERSION
         PACKAGES_URL: $PACKAGES_URL
         PACKAGES_MAVEN_URL: $PACKAGES_MAVEN_URL
         PACKAGING_BUILD_NUMBER: $PACKAGING_BUILD_NUMBER
@@ -59,7 +59,7 @@ global_job_config:
         else
             export PLATFORM_LABEL=""
         fi
-      - export PACKAGING_BUILD_ARGS=" -DCONFLUENT_VERSION=$CONFLUENT_VERSION  -DCONFLUENT_PLATFORM_LABEL=$PLATFORM_LABEL -DCONFLUENT_DEB_VERSION=$CONFLUENT_DEB_VERSION  -DALLOW_UNSIGNED=$ALLOW_UNSIGNED"
+      - export PACKAGING_BUILD_ARGS=" -DGATEWAY_VERSION=$GATEWAY_VERSION  -DCONFLUENT_PLATFORM_LABEL=$PLATFORM_LABEL -DCONFLUENT_DEB_VERSION=$CONFLUENT_DEB_VERSION  -DALLOW_UNSIGNED=$ALLOW_UNSIGNED"
       - >-
         if [[ $IS_RELEASE && $PACKAGING_BUILD_NUMBER ]]; then
           if [[ $IS_RC ]]; then
