--- a/service.yml
+++ b/service.yml
@@ -25,7 +25,7 @@ semaphore:
       branch: master
       pipeline_file: .semaphore/cp_dockerfile_build.yml
       parameters:
-        - name: CONFLUENT_VERSION
+        - name: GATEWAY_VERSION
           required: true
         - name: PACKAGES_URL
           required: true
@@ -53,7 +53,7 @@ semaphore:
       branch: master
       pipeline_file: .semaphore/cp_dockerfile_promote.yml
       parameters:
-        - name: CONFLUENT_VERSION
+        - name: GATEWAY_VERSION
           required: true
         - name: IMAGE_REVISION
           required: true
