--- a/.semaphore/cp_dockerfile_promote.yml
+++ b/.semaphore/cp_dockerfile_promote.yml
@@ -26,14 +26,14 @@ global_job_config:
       - checkout
       - . vault-setup
       # Semaphore does not accept empty values for parameters.
-      - if [[ -z "$CONFLUENT_VERSION" ]]; then echo "Must specify CONFLUENT_VERSION" && exit 1; fi
+      - if [[ -z "$GATEWAY_VERSION" ]]; then echo "Must specify GATEWAY_VERSION" && exit 1; fi
       - if [[ -z "$IMAGE_REVISION" ]]; then echo "Must specify IMAGE_REVISION" && exit 1; fi
       - if [[ -z "$PROMOTE_OS_TYPE" ]]; then echo "Must specify PROMOTE_OS_TYPE" && exit 1; fi
       - >-
         echo """
         Parameters:
         ==========================
-        CONFLUENT_VERSION: $CONFLUENT_VERSION
+        GATEWAY_VERSION: $GATEWAY_VERSION
         IMAGE_REVISION: $IMAGE_REVISION
         UPDATE_LATEST_TAG: $UPDATE_LATEST_TAG
         PACKAGING_BUILD_NUMBER: $PACKAGING_BUILD_NUMBER
@@ -41,7 +41,7 @@ global_job_config:
         """
       - export BRANCH_TAG=$(echo $SEMAPHORE_GIT_BRANCH | tr / -)
       - export DOCKER_PROD_REGISTRY="519856050701.dkr.ecr.us-west-2.amazonaws.com/docker/prod/"
-      - export PROMOTED_TAG_PREFIX="$CONFLUENT_VERSION-$IMAGE_REVISION"
+      - export PROMOTED_TAG_PREFIX="$GATEWAY_VERSION-$IMAGE_REVISION"
       - if [[ ! "$PACKAGING_BUILD_NUMBER" ]]; then export $PACKAGING_BUILD_NUMBER="latest"; fi
       - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
       - export AMD_ARCH=.amd64
@@ -80,7 +80,7 @@ blocks:
             - docker push $DOCKER_REPO:$PROMOTED_TAG
             - >-
               if [[ ! "$OS_TYPE" ]] || [[ "$OS_TYPE" =~ ubi* ]]; then
-                  export APPLY_TAG=$CONFLUENT_VERSION$AMD_ARCH
+                  export APPLY_TAG=$GATEWAY_VERSION$AMD_ARCH
                   docker tag $DOCKER_PROD_REGISTRY$DOCKER_REPO:$INTERNAL_IMAGE_TAG $DOCKER_REPO:$APPLY_TAG
                   docker push $DOCKER_REPO:$APPLY_TAG
                   export APPLIED="true"
@@ -115,7 +115,7 @@ blocks:
             - docker push $DOCKER_REPO:$PROMOTED_TAG
             - >-
               if [[ ! "$OS_TYPE" ]] || [[ "$OS_TYPE" =~ ubi* ]]; then
-                  export APPLY_TAG=$CONFLUENT_VERSION$ARM_ARCH
+                  export APPLY_TAG=$GATEWAY_VERSION$ARM_ARCH
                   docker tag $DOCKER_PROD_REGISTRY$DOCKER_REPO:$INTERNAL_IMAGE_TAG $DOCKER_REPO:$APPLY_TAG
                   docker push $DOCKER_REPO:$APPLY_TAG
                   export APPLIED="true"
@@ -146,8 +146,8 @@ blocks:
             - docker manifest push $DOCKER_REPO:$PROMOTED_TAG
             - >-
               if [[ ! "$OS_TYPE" ]] || [[ "$OS_TYPE" =~ ubi* ]]; then
-                  docker manifest create $DOCKER_REPO:$CONFLUENT_VERSION $DOCKER_REPO:$CONFLUENT_VERSION$AMD_ARCH $DOCKER_REPO:$CONFLUENT_VERSION$ARM_ARCH
-                  docker manifest push $DOCKER_REPO:$CONFLUENT_VERSION
+                  docker manifest create $DOCKER_REPO:$GATEWAY_VERSION $DOCKER_REPO:$GATEWAY_VERSION$AMD_ARCH $DOCKER_REPO:$GATEWAY_VERSION$ARM_ARCH
+                  docker manifest push $DOCKER_REPO:$GATEWAY_VERSION
                   export APPLIED="true"
               fi
             - >-
