--- a/pom.xml
+++ b/pom.xml
@@ -43,29 +43,29 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <configuration>
                     <buildArgs>
-                        <UBI_MINIMAL_VERSION>${ubi9.minimal.image.version}</UBI_MINIMAL_VERSION>
-                        <ARCH>${arch.type}</ARCH>
-                        <GATEWAY_VERSION>${GATEWAY_VERSION}</GATEWAY_VERSION>
+                        <UBI_MINIMAL_VERSION>${docker.build.ubi9.minimal.version}</UBI_MINIMAL_VERSION>
+                        <ARCH>${docker.build.arch}</ARCH>
+                        <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
                     </buildArgs>
                 </configuration>
             </plugin>
-          <plugin>
-            <groupId>io.fabric8</groupId>
-            <artifactId>docker-maven-plugin</artifactId>
-            <configuration>
-              <images>
-                <image>
-                  <build>
-                    <args>
-                      <UBI_MINIMAL_VERSION>${ubi9.minimal.image.version}</UBI_MINIMAL_VERSION>
-                      <ARCH>${arch.type}</ARCH>
-                      <GATEWAY_VERSION>${GATEWAY_VERSION}</GATEWAY_VERSION>
-                    </args>
-                  </build>
-                </image>
-              </images>
-            </configuration>
-          </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <configuration>
+                    <images>
+                        <image>
+                            <build>
+                                <args>
+                                    <UBI_MINIMAL_VERSION>${docker.build.ubi9.minimal.version}</UBI_MINIMAL_VERSION>
+                                    <ARCH>${docker.build.arch}</ARCH>
+                                    <GATEWAY_VERSION>${docker.build.gateway.version}</GATEWAY_VERSION>
+                                </args>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -76,5 +76,10 @@
         <!--  This is a placeholder for the architecture of the image that we will need from input
          and the input will come in mvn command from semaphore.yml file -->
         <docker.file>Dockerfile.ubi9</docker.file>
+        
+        <!-- Shared Docker build arguments -->
+        <docker.build.ubi9.minimal.version>${ubi9.minimal.image.version}</docker.build.ubi9.minimal.version>
+        <docker.build.arch>${arch.type}</docker.build.arch>
+        <docker.build.gateway.version>${GATEWAY_VERSION}</docker.build.gateway.version>
     </properties>
 </project>
