Remove unnecessary community repos code and rename gateway to cp-gateway

--- a/.semaphore/cp_dockerfile_promote.yml
+++ b/.semaphore/cp_dockerfile_promote.yml
@@ -46,30 +46,19 @@ global_job_config:
       - docker login --username $DOCKERHUB_USER --password $DOCKERHUB_APIKEY
       - export AMD_ARCH=.amd64
       - export ARM_ARCH=.arm64
-      - export COMMUNITY_DOCKER_REPOS=""
-      - |
-        if [[ $SKIP_COMMUNITY == "True" ]]; then
-          for skip_repo in $COMMUNITY_DOCKER_REPOS; do
-            if [ "$skip_repo" = "$DOCKER_IMAGE" ]; then
-              echo "Skipping promotion for $DOCKER_IMAGE as it is in COMMUNITY_DOCKER_REPOS list"
-              export SEMAPHORE_JOB_RESULT=passed
-              return 130
-            fi
-          done
-        fi
 
 blocks:
   - name: Promote AMD
     dependencies: []
     task:
       jobs:
-        - name: Promote confluentinc/gateway ubi9 AMD
+        - name: Promote confluentinc/cp-gateway ubi9 AMD
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cp-gateway
           commands:
             - export OS_TYPE="ubi9"
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cp-gateway"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
             - export INTERNAL_IMAGE_TAG="$BRANCH_TAG-$PACKAGING_BUILD_NUMBER$OS_TAG$AMD_ARCH"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG$AMD_ARCH"
@@ -98,13 +87,13 @@ blocks:
     dependencies: []
     task:
       jobs:
-        - name: Promote confluentinc/gateway ubi9 ARM
+        - name: Promote confluentinc/cp-gateway ubi9 ARM
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cp-gateway
           commands:
             - export OS_TYPE="ubi9"
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cp-gateway"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
             - export INTERNAL_IMAGE_TAG="$BRANCH_TAG-$PACKAGING_BUILD_NUMBER$OS_TAG$ARM_ARCH"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG$ARM_ARCH"
@@ -133,14 +122,14 @@ blocks:
     dependencies: ["Promote AMD", "Promote ARM"]
     task:
       jobs:
-        - name: Create Manifest confluentinc/gateway ubi9
+        - name: Create Manifest confluentinc/cp-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cp-gateway
           commands:
             - export OS_TYPE="ubi9"
             - if [[ ! "$OS_TYPE" ]]; then export OS_TAG=""; elif [[ "$OS_TYPE" =~ $PROMOTE_OS_TYPE* ]]; then export OS_TAG="-$OS_TYPE"; fi
-            - export DOCKER_REPO="confluentinc/gateway"
+            - export DOCKER_REPO="confluentinc/cp-gateway"
             - export PROMOTED_TAG="$PROMOTED_TAG_PREFIX$OS_TAG"
             - docker manifest create $DOCKER_REPO:$PROMOTED_TAG $DOCKER_REPO:$PROMOTED_TAG$AMD_ARCH $DOCKER_REPO:$PROMOTED_TAG$ARM_ARCH
             - docker manifest push $DOCKER_REPO:$PROMOTED_TAG
