--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -67,29 +67,8 @@ global_job_config:
       - export DOCKER_UPSTREAM_REGISTRY=$DOCKER_PROD_REGISTRY
       - export LATEST_TAG=$BRANCH_TAG-latest
       - export DOCKER_UPSTREAM_TAG="$LATEST_TAG"
-      - export DOCKER_REPOS="confluentinc/gateway"
-      - export COMMUNITY_DOCKER_REPOS=""
-      - |
-        if [[ $SKIP_COMMUNITY == "True" ]]; then
-          # Filter out community repos from DOCKER_REPOS
-          DOCKER_REPOS=$(comm -23 <(echo "$DOCKER_REPOS" | tr ' ' '\n' | sort) <(echo "$COMMUNITY_DOCKER_REPOS" | tr ' ' '\n' | sort) | tr '\n' ' ' | xargs)
-          export DOCKER_REPOS
-          echo "DOCKER_REPOS after skipping community images - $DOCKER_REPOS"
-
-          # Set Maven arguments for skipping community modules
-          export MAVEN_EXTRA_ARGS=""
-
-          # Check if current DOCKER_IMAGE is in community repos, skip job execution
-          for skip_repo in $COMMUNITY_DOCKER_REPOS; do
-            if [ "$skip_repo" = "$DOCKER_IMAGE" ]; then
-              echo "Skipping build for $DOCKER_IMAGE as it is in COMMUNITY_DOCKER_REPOS list"
-              export SEMAPHORE_JOB_RESULT=passed
-              return 130
-            fi
-          done
-        else
-          export MAVEN_EXTRA_ARGS=""
-        fi
+      - export DOCKER_REPOS="confluentinc/cp-gateway"
+      - export MAVEN_EXTRA_ARGS=""
       - export DOCKER_DEV_TAG="dev-$BRANCH_TAG-$BUILD_NUMBER"
       - export AMD_ARCH=.amd64
       - export ARM_ARCH=.arm64
