--- a/.semaphore/cp_dockerfile_build.yml
+++ b/.semaphore/cp_dockerfile_build.yml
@@ -78,29 +78,8 @@ global_job_config:
       - export DOCKER_UPSTREAM_REGISTRY=$DOCKER_PROD_REGISTRY
       - export LATEST_TAG=$BRANCH_TAG-latest
       - export DOCKER_UPSTREAM_TAG="$LATEST_TAG"
-      - export DOCKER_REPOS="confluentinc/gateway"
-      - export COMMUNITY_DOCKER_REPOS=""
-      - |
-        if [[ $SKIP_COMMUNITY == "True" ]]; then
-          # Filter out community repos from DOCKER_REPOS
-          DOCKER_REPOS=$(comm -23 <(echo "$DOCKER_REPOS" | tr ' ' '\n' | sort) <(echo "$COMMUNITY_DOCKER_REPOS" | tr ' ' '\n' | sort) | tr '\n' ' ' | xargs)
-          export DOCKER_REPOS
-          echo "DOCKER_REPOS after skipping community images - $DOCKER_REPOS"
-
-          # Set Maven arguments for skipping community modules
-          export MAVEN_EXTRA_ARGS=""
-
-          # Check if current DOCKER_IMAGE is in community repos, skip job execution
-          for skip_repo in $COMMUNITY_DOCKER_REPOS; do
-            if [ "$skip_repo" = "$DOCKER_IMAGE" ]; then
-              echo "Skipping build for $DOCKER_IMAGE as it is in COMMUNITY_DOCKER_REPOS list"
-              export SEMAPHORE_JOB_RESULT=passed
-              return 130
-            fi
-          done
-        else
-          export MAVEN_EXTRA_ARGS=""
-        fi
+      - export DOCKER_REPOS="confluentinc/cp-gateway"
+      - export MAVEN_EXTRA_ARGS=""
       - export DOCKER_DEV_TAG="dev-$BRANCH_TAG-$BUILD_NUMBER"
       - export AMD_ARCH=.amd64
       - export ARM_ARCH=.arm64
@@ -145,22 +124,22 @@ blocks:
             - . publish-test-results
             - artifact push workflow target/test-results
             - artifact push workflow target --destination target-AMD
-  - name: Deploy AMD confluentinc/gateway
+  - name: Deploy AMD confluentinc/cp-gateway
     dependencies: ["Build, Test, & Scan AMD"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
     task:
       jobs:
-        - name: Deploy AMD confluentinc/gateway ubi9
+        - name: Deploy AMD confluentinc/cp-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cp-gateway
           commands:
             - export OS_TAG="-ubi9"
-            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/gateway
+            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/cp-gateway
             - export GIT_COMMIT_TAG=$GIT_COMMIT$OS_TAG$AMD_ARCH
             - export BRANCH_BUILD_TAG=$BRANCH_TAG-$BUILD_NUMBER$OS_TAG$AMD_ARCH
-            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/gateway:$DOCKER_DEV_TAG$OS_TAG$AMD_ARCH
+            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/cp-gateway:$DOCKER_DEV_TAG$OS_TAG$AMD_ARCH
             - docker pull $DEV_IMAGE_FULL
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$GIT_COMMIT_TAG
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$BRANCH_BUILD_TAG
@@ -204,7 +183,7 @@ blocks:
             - . publish-test-results
             - artifact push workflow target/test-results
             - artifact push workflow target --destination target-ARM
-  - name: Deploy ARM confluentinc/gateway
+  - name: Deploy ARM confluentinc/cp-gateway
     dependencies: ["Build & Test ARM"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
@@ -213,16 +192,16 @@ blocks:
         machine:
           type: s1-prod-ubuntu24-04-arm64-1
       jobs:
-        - name: Deploy ARM confluentinc/gateway ubi9
+        - name: Deploy ARM confluentinc/cp-gateway ubi9
           env_vars:
             - name: DOCKER_IMAGE
-              value: confluentinc/gateway
+              value: confluentinc/cp-gateway
           commands:
             - export OS_TAG="-ubi9"
-            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/gateway
+            - export PROD_IMAGE_NAME=${DOCKER_PROD_REGISTRY}confluentinc/cp-gateway
             - export GIT_COMMIT_TAG=$GIT_COMMIT$OS_TAG$ARM_ARCH
             - export BRANCH_BUILD_TAG=$BRANCH_TAG-$BUILD_NUMBER$OS_TAG$ARM_ARCH
-            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/gateway:$DOCKER_DEV_TAG$OS_TAG$ARM_ARCH
+            - export DEV_IMAGE_FULL=${DOCKER_DEV_REGISTRY}confluentinc/cp-gateway:$DOCKER_DEV_TAG$OS_TAG$ARM_ARCH
             - docker pull $DEV_IMAGE_FULL
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$GIT_COMMIT_TAG
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$BRANCH_BUILD_TAG
@@ -238,7 +217,7 @@ blocks:
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
             - docker push $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
   - name: Create Manifest
-    dependencies: ["Deploy AMD confluentinc/gateway", "Deploy ARM confluentinc/gateway"]
+    dependencies: ["Deploy AMD confluentinc/cp-gateway", "Deploy ARM confluentinc/cp-gateway"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
     task:
