--- a/.semaphore/cp_dockerfile_build.yml
+++ b/.semaphore/cp_dockerfile_build.yml
@@ -42,7 +42,6 @@ global_job_config:
         PACKAGES_MAVEN_URL: $PACKAGES_MAVEN_URL
         PACKAGING_BUILD_NUMBER: $PACKAGING_BUILD_NUMBER
         ALLOW_UNSIGNED: $ALLOW_UNSIGNED
-        CONFLUENT_DEB_VERSION: $CONFLUENT_DEB_VERSION
         """
       - if [[ $BRANCH_TAG =~ "-rc" ]]; then export IS_RC="true"; fi
       - if [[ $BRANCH_TAG =~ "-cp" ]]; then export IS_HOTFIX="true"; fi
@@ -59,7 +58,7 @@ global_job_config:
         else
             export PLATFORM_LABEL=""
         fi
-      - export PACKAGING_BUILD_ARGS=" -DGATEWAY_VERSION=$GATEWAY_VERSION  -DCONFLUENT_PLATFORM_LABEL=$PLATFORM_LABEL -DCONFLUENT_DEB_VERSION=$CONFLUENT_DEB_VERSION  -DALLOW_UNSIGNED=$ALLOW_UNSIGNED"
+      - export PACKAGING_BUILD_ARGS=" -DGATEWAY_VERSION=$GATEWAY_VERSION  -DCONFLUENT_PLATFORM_LABEL=$PLATFORM_LABEL -DALLOW_UNSIGNED=$ALLOW_UNSIGNED"
       - >-
         if [[ $IS_RELEASE && $PACKAGING_BUILD_NUMBER ]]; then
           if [[ $IS_RC ]]; then
@@ -68,8 +67,9 @@ global_job_config:
                   export MAVEN_PACKAGES_URL=$PACKAGES_MAVEN_URL
               fi
           fi
-          # Overwrite maven global configuration
-          . vault-sem-get-secret maven-settings-cp-dockerfile
+          # Overwrite maven global configuration 
+          vault kv get -field settings v1/ci/kv/maven/semaphore_maven_independent_release_packaging_settings > template-settings.xml
+          mv ~/.m2/settings.xml ~/.m2/settings.xml.bak && envsubst < template-settings.xml > ~/.m2/settings.xml # Replacing maven settings with packaging specific settings
         else
           echo "This job is not a isHotfixJob or isRcJob (What we know how to handle) - and we don't know how to handle it"
         fi
@@ -79,28 +79,7 @@ global_job_config:
       - export LATEST_TAG=$BRANCH_TAG-latest
       - export DOCKER_UPSTREAM_TAG="$LATEST_TAG"
       - export DOCKER_REPOS="confluentinc/gateway"
-      - export COMMUNITY_DOCKER_REPOS=""
-      - |
-        if [[ $SKIP_COMMUNITY == "True" ]]; then
-          # Filter out community repos from DOCKER_REPOS
-          DOCKER_REPOS=$(comm -23 <(echo "$DOCKER_REPOS" | tr ' ' '\n' | sort) <(echo "$COMMUNITY_DOCKER_REPOS" | tr ' ' '\n' | sort) | tr '\n' ' ' | xargs)
-          export DOCKER_REPOS
-          echo "DOCKER_REPOS after skipping community images - $DOCKER_REPOS"
-
-          # Set Maven arguments for skipping community modules
-          export MAVEN_EXTRA_ARGS=""
-
-          # Check if current DOCKER_IMAGE is in community repos, skip job execution
-          for skip_repo in $COMMUNITY_DOCKER_REPOS; do
-            if [ "$skip_repo" = "$DOCKER_IMAGE" ]; then
-              echo "Skipping build for $DOCKER_IMAGE as it is in COMMUNITY_DOCKER_REPOS list"
-              export SEMAPHORE_JOB_RESULT=passed
-              return 130
-            fi
-          done
-        else
-          export MAVEN_EXTRA_ARGS=""
-        fi
+      - export MAVEN_EXTRA_ARGS=""
       - export DOCKER_DEV_TAG="dev-$BRANCH_TAG-$BUILD_NUMBER"
       - export AMD_ARCH=.amd64
       - export ARM_ARCH=.arm64
@@ -118,7 +97,7 @@ blocks:
     dependencies: ["Validation"]
     run:
       # don't run the tests on non-functional changes...
-      when: "change_in('/', {exclude: ['/.deployed-versions/', '.github/'], default_branch: 'master'})"
+      when: "change_in('/', {exclude: ['/.deployed-versions/', '.github/']})"
     task:
       jobs:
         - name: Build, Test, & Scan ubi9
@@ -179,7 +158,7 @@ blocks:
     dependencies: ["Validation"]
     run:
       # don't run the tests on non-functional changes...
-      when: "change_in('/', {exclude: ['/.deployed-versions/', '.github/'], default_branch: 'master'})"
+      when: "change_in('/', {exclude: ['/.deployed-versions/', '.github/']})"
     task:
       agent:
         machine:
@@ -237,21 +216,15 @@ blocks:
             - export LATEST_PUSH_TAG=$LATEST_TAG$OS_TAG$ARM_ARCH
             - docker tag $DEV_IMAGE_FULL $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
             - docker push $PROD_IMAGE_NAME:$LATEST_PUSH_TAG
-  - name: Create Manifest and Maven Deploy
+  - name: Create Manifest
     dependencies: ["Deploy AMD confluentinc/gateway", "Deploy ARM confluentinc/gateway"]
     run:
       when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
     task:
       jobs:
-        - name: Create Manifest and Maven Deploy
+        - name: Create Manifest
           commands:
             - export DOCKER_PROD_IMAGE_NAME=$DOCKER_PROD_REGISTRY${DOCKER_REPOS// / $DOCKER_PROD_REGISTRY}
-            - ci-tools ci-update-version
-            - ci-tools ci-push-tag
-            - |-
-              if [[ ! $IS_RELEASE && ! $IS_PREVIEW ]]; then
-                mvn -Dmaven.wagon.http.retryHandler.count=3 --batch-mode -P jenkins,docker -DaltDeploymentRepository=confluent-codeartifact-internal::default::https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/ -DrepositoryId=confluent-codeartifact-internal deploy -DskipTests -Ddocker.skip-build=true -Ddocker.skip-test=true  $MAVEN_EXTRA_ARGS
-              fi
             # Create manifest
             - >-
               for image in $DOCKER_PROD_IMAGE_NAME;
@@ -274,6 +247,29 @@ blocks:
                 docker manifest create $image:$LATEST_MANIFEST_TAG $image:$LATEST_MANIFEST_TAG$AMD_ARCH $image:$LATEST_MANIFEST_TAG$ARM_ARCH
                 docker manifest push $image:$LATEST_MANIFEST_TAG
               done
+  - name: Push docker images tags summary to artifacts
+    dependencies:
+      - Create Manifest
+    run:
+      when: "branch = 'master' or branch =~ '^[0-9]+\\.[0-9]+\\.x$' or branch =~ '^[0-9]+\\.[0-9]+\\.[0-9]+(-cp[0-9]+)?(-rc[0-9]+)?$'"
+    task:
+      jobs:
+        - name: Push docker images tags summary to artifacts
+          commands:
+            - export DOCKER_PROD_IMAGE_NAMES=$DOCKER_PROD_REGISTRY${DOCKER_REPOS// / $DOCKER_PROD_REGISTRY}
+            - export OS_TAG="-ubi9"
+            - echo "The following tags are available for this build:" > docker-tags-summary.txt
+            - >-
+              for image in $DOCKER_PROD_IMAGE_NAMES;
+              do
+                echo "$image:$GIT_COMMIT$OS_TAG" >> docker-tags-summary.txt
+                echo "$image:$BRANCH_TAG-$BUILD_NUMBER$OS_TAG" >> docker-tags-summary.txt
+                echo "$image:$BRANCH_TAG-$PACKAGING_BUILD_NUMBER$OS_TAG" >> docker-tags-summary.txt
+                echo "$image:$LATEST_TAG$OS_TAG" >> docker-tags-summary.txt
+                echo "" >> docker-tags-summary.txt
+              done
+            - echo "Tags summary saved to docker-tags-summary.txt"
+            - artifact push workflow docker-tags-summary.txt
 after_pipeline:
   task:
     agent:
